--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -12,6 +12,10 @@
   </p>
 
   <p>
+    <a href="/examples/1.3-timer-smart">#1.3 Timer: smart</a>
+  </p>
+
+  <p>
     <a href="/examples/2.1-hello-input">#2.1 Hello: input</a>
   </p>
 
