--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
 
 {% block body %}
-  <h1>Examples</h1>
+  <h1>CycleJS examples</h1>
+
+  <h2>Lesson 1: gentle introduction</h2>
 
   <p>
-    <a href="/examples/1.1-hello-cycle">#1.1 Hello: cycle</a>
+    <a href="/examples/1.1-hello-cycle">Example 1.1: hello cycle</a>
   </p>
 
   <p>
-    <a href="/examples/1.2-hello-streams">#1.2 Hello: streams</a>
+    <a href="/examples/1.2-hello-streams">Example 1.2: hello streams</a>
+  </p>
+
+  <p>
+    <a href="/examples/1.3-hello-nodes">Example 1.3: hello nodes</a>
   </p>
 
   <!--<p>-->
