Refactor stopwatch example

--- a/2.03-timer-stopwatch/styles/theme.css
+++ b/2.03-timer-stopwatch/styles/theme.css
@@ -6,17 +6,20 @@ body {
 }
 
 main {
+  padding: 25px;
   position: relative;
-  max-width: 300px;
+  width: 300px;
+  height: 300px;
   margin: auto auto;
-}
-
-.stopWatch.trigger {
-  margin-top: 20px;
 }
 
 .stopWatch.frame {
   position: relative;
+  margin: auto auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   border-radius: 50%;
 	width: 200px;
 	height: 200px;
@@ -30,4 +33,14 @@ main {
   height: 50%;
   width: 2px;
   background-color: white;
+}
+
+.stopWatch.trigger {
+  text-align: center;
+  margin: auto auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin-top: 20px;
 }
