--- a/2.11-menu-stateful/styles/theme.css
+++ b/2.11-menu-stateful/styles/theme.css
@@ -10,3 +10,22 @@ main {
   max-width: 300px;
   margin: auto auto;
 }
+
+nav {
+  margin-bottom: 20px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+}
+
+nav .item {
+  cursor: pointer;
+  border: 1px solid skyblue;
+  margin-right: 10px;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+nav .item.active {
+  background: skyblue;
+}
